# aws-bedrock

./: .gitignore  README.md  package.json  test.http
.github/: copilot-instructions.md
backend/: chatbot_api_list.txt
backend/chatbot/: Dockerfile  pyproject.toml  requirements.txt  tasks.py
backend/chatbot/app/: main.py
backend/chatbot/app/api/endpoints/: chat.py
backend/chatbot/app/core/: llm.py
backend/chatbot/app/models/: schema.py
backend/chatbot/app/services/: chat_logic.py
backend/chatbot/test/: api.http
backend/chatbot/test/tester/: package.json
backend/chatbot/test/tester/src/: test.ts
chatbot-ui/: README.md  jest.config.ts  middleware.ts  next.config.js  package-lock.json  package.json
docs/: actions.md  apis.md  architecture.drawio  functions.md  tech_stacks.md  technology_stacks.md
frontend/: .eslintrc.js  .gitignore  README.md  build.sh  index.html  jest.config.ts  next.config.js  package-lock.json  package.json  prettier.config.cjs  prettier.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend-new/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend-next/: .env.local.example  README.md  middleware.ts  package.json  tsconfig.json
frontend-spa/: .env  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.mts  vite.config.ts
scripts/: deploy-auth.sh
terraform/: README.md  STYLE_GUIDE.md  apigw.tf  bedrock_kb.tf  bucket.tf  cloudmap.tf  (+16 more)
(+777 files in other folders)
